# kittywrite

./: Cargo.toml  GUIDE.md  LICENSE  README.md  init.lua
examples/plugins/word-count/: init.lua
examples/themes/: ocean.json
src/: app.rs  editor.rs  filetree.rs  highlighter.rs  lua_engine.rs  main.rs  plugin.rs  theme.rs
