[package]
name = "kittywrite"
authors = ["zen2arc"]
version = "0.3.0"
edition = "2021"
description = "lightweight open-source code editor"
license = "MIT"

[[bin]]
name = "kittywrite"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "glow"] }
egui  = "0.33"
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }
mlua = { version = "0.11", features = ["lua54", "vendored"] }
rfd = "0.17"
egui-phosphor = { version = "0.11", features = ["regular"] }
serde_json = "1"

[profile.release]
opt-level   = 3
lto         = true
codegen-units = 1
strip       = true
