[package]
name = "kittywrite"
authors = ["zen2arc"]
version = "0.3.1"
edition = "2021"
description = "lightweight open-source code editor"
license = "MIT"

[[bin]]
name = "kittywrite"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.34", default-features = false, features = ["default_fonts", "glow"] }
egui  = "0.34"
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }
mlua = { version = "0.11", features = ["lua54", "vendored"] }
rfd = "0.17"
egui-phosphor = { version = "0.12", features = ["regular"] }
serde_json = "1"
itoa = "1"

[profile.release]
opt-level   = 3
lto         = true
codegen-units = 1
strip       = true
